// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Most Read Page A11y I can see the skip to content link 1`] = `"Bỏ qua để xem nội dung"`;

exports[`AMP Most Read Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Most Read Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Most Read Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=97&p=vietnamese.popular.read.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x2=[amp]&x3=[news-vietnamese]&x4=[vi]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[list-datadriven]&x8=[simorgh]&x9=[%C4%90%E1%BB%8Dc%2520nhi%E1%BB%81u%2520nh%E1%BA%A5t%2520-%2520BBC%2520News%2520Ti%E1%BA%BFng%2520Vi%E1%BB%87t]&x11=[2021-05-04T11%3A38%3A00Z]&x12=[2021-05-04T11%3A53%3A00Z]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Most Read Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "Most Read",
    "domain": "test.bbc.co.uk",
    "sections": "Vietnamese, Vietnamese - Most Read",
    "title": "Đọc nhiều nhất - BBC News Tiếng Việt",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Most Read Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Tiếng Việt",
  "url": "/vietnamese",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 2`] = `
{
  "text": "Tại sao bạn có thể tin tưởng BBC News",
  "url": "https://www.bbc.com/vietnamese/institutional-49283563",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 3`] = `
{
  "text": "Điều khoản sử dụng",
  "url": "https://www.bbc.com/vietnamese/institutional-37622991",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 4`] = `
{
  "text": "Về BBC",
  "url": "https://www.bbc.com/vietnamese/institutional-37623840",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 5`] = `
{
  "text": "Chính sách riêng tư",
  "url": "https://www.bbc.com/vietnamese/institutional-37623841",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookie",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 7`] = `
{
  "text": "Liên hệ BBC",
  "url": "https://www.bbc.co.uk/vietnamese/send/u50853951",
}
`;

exports[`AMP Most Read Page Footer Anchors should match text and url 8`] = `
{
  "text": "Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Most Read Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Most Read Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/vietnamese"`;

exports[`AMP Most Read Page Footer I can see the footer copyright and external linking text 1`] = `"© 2024 BBC. BBC không chịu trách nhiệm nội dung các trang ngoài. Tìm hiểu cách chúng tôi tiếp cận việc dẫn tới trang ngoài"`;

exports[`AMP Most Read Page Header I can see the branding 1`] = `"BBC News, Tiếng Việt"`;

exports[`AMP Most Read Page Header Navigation link should match text and url 1`] = `
{
  "text": "Tin chính",
  "url": "/vietnamese",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 2`] = `
{
  "text": "Việt Nam",
  "url": "/vietnamese/topics/ckdxnx1x5rnt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 3`] = `
{
  "text": "Thế giới",
  "url": "/vietnamese/topics/cnlv9j1ekq0t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 4`] = `
{
  "text": "Kinh tế",
  "url": "/vietnamese/topics/cez1ey7nzj3t",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 5`] = `
{
  "text": "Thể thao",
  "url": "/vietnamese/topics/ckdxnx1k7zxt",
}
`;

exports[`AMP Most Read Page Header Navigation link should match text and url 6`] = `
{
  "text": "Video",
  "url": "/vietnamese/topics/cl29j0ekkvdt",
}
`;

exports[`AMP Most Read Page I can see the headline 1`] = `"Đọc nhiều nhất"`;

exports[`AMP Most Read Page I can see the list items 1`] = `"1Nato lo ngại vì hỏa tiễn Nga ở KaliningradCập nhật gần nhất: 10 tháng 10 năm 2016"`;

exports[`AMP Most Read Page I can see the list items 2`] = `"2Bí thư Lý Sơn ‘không phải con ông lớn’ 26Cập nhật gần nhất: 26 tháng 9 năm 2016"`;

exports[`AMP Most Read Page I can see the list items 3`] = `"3Bí thư Lý Sơn ‘không phải con ông lớn’ 8Cập nhật gần nhất: 26 tháng 9 năm 2016"`;

exports[`AMP Most Read Page I can see the list items 4`] = `"4Bí thư Lý Sơn ‘không phải con ông lớn’ 17Cập nhật gần nhất: 26 tháng 9 năm 2016"`;

exports[`AMP Most Read Page I can see the list items 5`] = `"5Bí thư Lý Sơn ‘không phải con ông lớn’ 14Cập nhật gần nhất: 26 tháng 9 năm 2016"`;

exports[`AMP Most Read Page I can see the list items 6`] = `"6LS Đài tới Berlin nhận giải nhân quyềnCập nhật gần nhất: 13 tháng 6 năm 2018"`;

exports[`AMP Most Read Page I can see the list items 7`] = `"7Rail fare rise biggest for five yearsCập nhật gần nhất: 5 tháng 12 năm 2017"`;

exports[`AMP Most Read Page I can see the list items 8`] = `"8Bí thư Lý Sơn ‘không phải con ông lớn’ 30Cập nhật gần nhất: 26 tháng 9 năm 2016"`;

exports[`AMP Most Read Page I can see the list items 9`] = `"9Bí thư Lý Sơn ‘không phải con ông lớn’ 9Cập nhật gần nhất: 26 tháng 9 năm 2016"`;

exports[`AMP Most Read Page I can see the list items 10`] = `"10Bí thư Lý Sơn ‘không phải con ông lớn’ 24Cập nhật gần nhất: 26 tháng 9 năm 2016"`;

exports[`AMP Most Read Page Main heading should match text 1`] = `"Đọc nhiều nhất"`;

exports[`AMP Most Read Page Most Read has item with rank 1`] = `
{
  "text": "Nato lo ngại vì hỏa tiễn Nga ở Kaliningrad",
  "url": "/vietnamese/23082277",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 2`] = `
{
  "text": "Bí thư Lý Sơn ‘không phải con ông lớn’ 26",
  "url": "/vietnamese/23078273",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 3`] = `
{
  "text": "Bí thư Lý Sơn ‘không phải con ông lớn’ 8",
  "url": "/vietnamese/23078234",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 4`] = `
{
  "text": "Bí thư Lý Sơn ‘không phải con ông lớn’ 17",
  "url": "/vietnamese/23078252",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 5`] = `
{
  "text": "Bí thư Lý Sơn ‘không phải con ông lớn’ 14",
  "url": "/vietnamese/23078251",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 6`] = `
{
  "text": "LS Đài tới Berlin nhận giải nhân quyền",
  "url": "/vietnamese/23204109",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 7`] = `
{
  "text": "Rail fare rise biggest for five years",
  "url": "/vietnamese/23169868",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 8`] = `
{
  "text": "Bí thư Lý Sơn ‘không phải con ông lớn’ 30",
  "url": "/vietnamese/23078277",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 9`] = `
{
  "text": "Bí thư Lý Sơn ‘không phải con ông lớn’ 9",
  "url": "/vietnamese/23078235",
}
`;

exports[`AMP Most Read Page Most Read has item with rank 10`] = `
{
  "text": "Bí thư Lý Sơn ‘không phải con ông lớn’ 24",
  "url": "/vietnamese/23078271",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/vietnamese/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-72x72.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-96x96.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-128x128.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-144x144.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-152x152.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-180x180.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-384x384.png",
}
`;

exports[`AMP Most Read Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/vietnamese/images/icons/icon-512x512.png",
}
`;

exports[`AMP Most Read Page SEO Canonical link 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`AMP Most Read Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Most Read Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Most Read Page SEO Heading level 1 1`] = `"Đọc nhiều nhất"`;

exports[`AMP Most Read Page SEO Lang attribute 1`] = `"vi"`;

exports[`AMP Most Read Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "vi",
        "name": "Vietnamese",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/vietnamese/popular/read",
        "@type": "WebPage",
        "name": "Đọc nhiều nhất",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
          "width": 1024,
        },
        "name": "BBC News Tiếng Việt",
        "publishingPrinciples": "https://www.bbc.com/vietnamese/institutional-49283563",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png",
      "url": "http://localhost:7080/vietnamese/popular/read",
    },
  ],
}
`;

exports[`AMP Most Read Page SEO OG description 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`AMP Most Read Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`AMP Most Read Page SEO OG image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`AMP Most Read Page SEO OG locale 1`] = `"vi-VN"`;

exports[`AMP Most Read Page SEO OG site name 1`] = `"BBC News Tiếng Việt"`;

exports[`AMP Most Read Page SEO OG title 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`AMP Most Read Page SEO OG type 1`] = `"website"`;

exports[`AMP Most Read Page SEO OG url 1`] = `"http://localhost:7080/vietnamese/popular/read"`;

exports[`AMP Most Read Page SEO Page title 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`AMP Most Read Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Most Read Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Most Read Page SEO Twitter creator 1`] = `"@bbcvietnamese"`;

exports[`AMP Most Read Page SEO Twitter description 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;

exports[`AMP Most Read Page SEO Twitter image alt 1`] = `"BBC News Tiếng Việt"`;

exports[`AMP Most Read Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/vietnamese.png"`;

exports[`AMP Most Read Page SEO Twitter site 1`] = `"@bbcvietnamese"`;

exports[`AMP Most Read Page SEO Twitter title 1`] = `"Đọc nhiều nhất - BBC News Tiếng Việt"`;
